# norm

./: .gitignore  .gitmodules  BUILD.TXT  CMakeLists.txt  Dockerfile  LICENSE  NormDeveloperGuide.html  NormSocketBindingNotes.txt  NormUserGuide.doc  README-DotNet.md  README-Java.txt  README-PyNorm.txt  README.md  TODO.TXT  VERSION.TXT  norm.pc.in  setup.py  waf  wscript
.devcontainer/: devcontainer.json
.devcontainer/dotnet-linux-x64/.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml  dotnet-publish.yml  dotnet.yml
android/: README.TXT  README.md  build.gradle  local.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: CMakeLists.txt  build.gradle
android/lib/src/main/: AndroidManifest.xml
cmake/: normConfig.cmake.in
common/: galois.cpp  galois.h  normApi.cpp  normApi.h  normApp.cpp  normBitmask.cpp  normBitmask.h  normEncoder.cpp  normEncoder.h  normEncoderRS8.cpp  normEncoderRS8.h  normFile.cpp  normFile.h  normMessage.cpp  normMessage.h  normNode.cpp  normNode.h  normObject.cpp  normObject.h  normPostProcess.cpp  normPostProcess.h  normPrecode.cpp  normSegment.cpp  normSegment.h  normSession.cpp  normSession.h  normSimAgent.cpp  normSimAgent.h  normTest.cpp  normThreadTest.cpp  normVersion.h  raft.cpp  rules.txt  version.h
doc/: NormDeveloperGuide.html  NormDeveloperGuide.xml  NormUserGuide.xml  npcUserGuide.xml
docker/: run.sh  setup.sh
examples/: README.TXT  chant.cpp  normCast.cpp  normCastApp.cpp  normClient.cpp  normDataExample.cpp  normDataRecv.cpp  normDataSend.cpp  normFileRecv.cpp  normFileSend.cpp  normMsgr.cpp  normRatelessTest.cpp  normServer.cpp  normSocket.cpp  normSocket.h  normSocketNotes.txt  normStreamRecv.cpp  normStreamSend.cpp  normStreamer.cpp  win32InputHandler.cpp  wintest.cpp
examples/java/: NormFileRecv.java  NormFileSend.java  NormFileSendRecv.java  NormMsgr.java  NormStreamRecv.java  NormStreamSend.java  README.TXT  filerecv.sh  filesend.sh  normMsgr.sh  streamrecv.sh  streamsend.sh
examples/python/: debugStats.py  fecBufferStats.py  fileRecvManager.py  normCast.py  normFileFeedback.py  normFileRecv.py  normFileSend.py  normMsgr.py  rawRecv.py  streamChat.py
include/: galois.h  normApi.h  normEncoder.h  normEncoderMDP.h  normEncoderRS16.h  normEncoderRS8.h  normFile.h  normMessage.h  normNode.h  normObject.h  normPostProcess.h  normSegment.h  normSession.h  normSimAgent.h  normVersion.h
makefiles/: Makefile.arm-linux  Makefile.common  Makefile.freebsd  Makefile.hpux  Makefile.iphone  Makefile.linux  Makefile.macosx  Makefile.mklinux  Makefile.netbsd  Makefile.sgi  Makefile.solaris  Makefile.x86_64-qnx
makefiles/android/: AndroidManifest.xml  README  build.xml
makefiles/android-ndk/: AndroidManifest.xml  README  ant.properties
makefiles/android-ndk/jni/: Android.mk  Application.mk
makefiles/android/jni/: Android.mk  Application.mk
makefiles/java/: Makefile.common  Makefile.linux  Makefile.macosx  build.xml
makefiles/win32/: Norm-2008.sln  Norm.sln  NormDll.vcproj  NormDll.vcxproj  NormLib.vcproj  NormLib.vcproj.vs2008  NormLib.vcxproj  README.TXT  normCast.vcxproj  normTest.vcproj  normTest.vcxproj  npc.vcproj  npc.vcxproj
makefiles/win32/norm/: norm.vcproj  norm.vcxproj
makefiles/wince/: Norm.vco
norp/: TODO.txt  VERSION.TXT
norp/doc/: norpUserGuide.html  norpUserGuide.xml
norp/include/: norp.h  norpVersion.h  protoPktSOCKS.h
norp/makefiles/: Makefile.common  Makefile.linux  Makefile.macosx
norp/makefiles/win32/: norp.sln  norp.vcxproj
norp/src/common/: norp.cpp  norpApp.cpp  protoPktSOCKS.cpp
ns/: README.txt  example.tcl  nackCount.cpp  normcc.tcl  ns-2.1b7a-Makefile.in  ns-2.1b9-Makefile.in  nsNormAgent.cpp  nsNormAgent.h  simplenorm.tcl  sizeAve.cpp  suppress.tcl
opnet/: OpnetNormProcess.h  mgen-ns2_2node_norm-ip_routes_olsr.gdf  norm_protolib.pr.cpp  norm_protolib.pr.m
opnet/12.0/: norm_protolib.pr.cpp
src/common/: fecTest.cpp  grttProbe.cpp  n2m.cpp  normApi.cpp  normApp.cpp  normEncoder.cpp  normEncoderMDP.cpp  normEncoderRS16.cpp  normEncoderRS8.cpp  normFile.cpp  normMessage.cpp  normNode.cpp  normObject.cpp  normPostProcess.cpp  normPrecode.cpp  normSegment.cpp  normSession.cpp  normSimAgent.cpp  normTest.cpp  normThreadTest.cpp  pcap2norm.cpp  raft.cpp  rules.txt
src/dotnet/: Mil.Navy.Nrl.Norm.sln  pack-linux-x64.sh  pack-win-x64.bat  pack-win-x86.bat
src/dotnet/design/SequenceDiagrams/: NormFileSend.puml
src/dotnet/src/Mil.Navy.Nrl.Norm.linux-x64/: Mil.Navy.Nrl.Norm.linux-x64.csproj
src/java/: .classpath  .project
src/java/jni/: normDataJni.cpp  normDataJni.h  normEventJni.cpp  normEventJni.h  normFileJni.cpp  normFileJni.h  normInstanceJni.cpp  normInstanceJni.h  normJni.cpp  normJni.h  normNodeJni.cpp  normNodeJni.h  normObjectJni.cpp  normObjectJni.h  normSessionJni.cpp  normSessionJni.h  normStreamJni.cpp  normStreamJni.h
src/pynorm/: __init__.py  constants.py  core.py  event.py  instance.py  node.py  object.py  session.py
src/pynorm/extra/: __init__.py  logparser.py  manager.py
src/rust/: API_GUIDE.md  Cargo.toml  README.md  waf_rust.py
src/rust/examples/: data_recv.rs  data_send.rs  file_recv.rs  file_send.rs  stream_example.rs  stream_recv.rs  stream_send.rs
src/rust/norm/: Cargo.toml  build.rs
src/rust/norm-sys/: Cargo.toml  build.rs  wrapper.h
src/rust/norm-sys/src/: lib.rs
src/rust/norm/src/: error.rs  event.rs  instance.rs  lib.rs  multicast.rs  node.rs  object.rs  session.rs  types.rs
src/sim/ns/: normcc.tcl  ns226-Makefile.in  simplenorm.tcl  suppress.tcl
src/unix/: unixPostProcess.cpp
src/win32/: win32PostProcess.cpp
unix/: Makefile.arm-linux  Makefile.common  Makefile.freebsd  Makefile.hpux  Makefile.linux  Makefile.macosx  Makefile.mklinux  Makefile.netbsd  Makefile.sgi  Makefile.solaris  Makefile.solx86  unixPostProcess.cpp
win32/: Norm.dsw  Norm.opt  Norm.sln  NormDll.vcproj  NormLib.dsp  NormLib.vcproj  normTest.dsp  normTest.vcproj  npc.vcproj  win32PostProcess.cpp
win32/norm/: norm.dsp  norm.vcproj
wince/: Norm.vco  Norm.vcp  Norm.vcw
wince/normApp/: normApp.vcp
(+81 files in other folders)
